<resources>
    <string name="app_name">HappyBirthday</string>
    <string name="menu_music">Выбрать музыку</string>


    //Первый код
    <string name="text1">Доброе утро, любимая. Сегодня твой день. Поэтому мы постарались сделать его особенным</string>
    <string name="text2">Для начала, давай научимся с тобой пользоваться приложением</string>
    <string name="text3">Тебе будут даны подсказки и место, где найти записку. После нахождения, тебе нужно будет ввести код в поле ниже и получить следующее задание</string>

    //Второй код
    <string name="text4">Отлично, ты ввела первый код. Принцип ты поняла. По ходу, тебе надо будет найти энное количество записок и прийти к своему сюрпризу</string>
    <string name="text5">Сейчас тебе надо включить мой компьютер. Найти на рабочем столе архив с названием "Еноты" Среди всех этих фотографий, имеется документ Word. Открой его и следуй инструкциям</string>

    //Третий код
    <string name="text6">Умничка. Отличные числа, не правда ли? ;) Теперь давай вспомним, как мы с тобой первый раз сидели у меня</string>
    <string name="text7">При каждой нашей встрече, нам было всегда весело и хорошо вместе. Все очень красиво у нас закрутилось</string>
    <string name="text8">Давай вспомним тот день, когда мы первый раз сидели у меня и этот день является датой начала наших отношений. Запиши в формате "ddMMhh"(270817 например)</string>

    //Финальный
    <string name="text9">На этом первый уровень подходит к концу</string>
    <string name="text10">По СМС ты получишь код для перехода на следуюший уровень</string>



    //Уровень два
    //Первый код
    <string name="text2_1">Вот уже и второй уровень. Он уже будет немного посложнее. Придется походится по квартире и поискать подсказки. Сейчас подойди к холодильнику. Покушай вкусных круассанов и воспользуйся стулом и табуреткой. Шрэкоблок</string>
    <string name="text2_2">Для начала, давай научимся с тобой пользоваться приложением</string>
    <string name="text2_3">Тебе будут даны подсказки и место, где найти записку. После нахождения, тебе нужно будет ввести код в поле ниже и получить следующее задание</string>



    //Уровень три
    //Первый код
    <string name="text3_1">Доброе утро, любимая. Сегодня твой день. Поэтому мы постарались сделать его особенным</string>
    <string name="text3_2">Для начала, давай научимся с тобой пользоваться приложением</string>
    <string name="text3_3">Тебе будут даны подсказки и место, где найти записку. После нахождения, тебе нужно будет ввести код в поле ниже и получить следующее задание</string>

    //Второй код
    <string name="text3_4">Доброе утро, любимая. Сегодня твой день. Поэтому мы постарались сделать его особенным</string>
    <string name="text3_5">Для начала, давай научимся с тобой пользоваться приложением</string>
    <string name="text3_6">Тебе будут даны подсказки и место, где найти записку. После нахождения, тебе нужно будет ввести код в поле ниже и получить следующее задание</string>

    //Третий код
    <string name="text3_7">Доброе утро, любимая. Сегодня твой день. Поэтому мы постарались сделать его особенным</string>
    <string name="text3_8">Для начала, давай научимся с тобой пользоваться приложением</string>
    <string name="text3_9">Тебе будут даны подсказки и место, где найти записку. После нахождения, тебе нужно будет ввести код в поле ниже и получить следующее задание</string>


</resources>
