<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2_1"
                android:text="@string/text2_1"/>

            <EditText
                android:id="@+id/editText2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Вводи, не стесняйся"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2_1"
                android:onClick="checkCode2_1"
                android:text="Проверить код"/>


            <!--Вторая секция-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2_2"
                android:text="@string/text2_2"/>

            <EditText
                android:id="@+id/editText2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2_2"
                android:onClick="checkCode2_2"
                android:text="Проверить код"/>

            <!--Третья секция-->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2_3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2_3"
                android:text="@string/text2_3"/>

            <EditText
                android:id="@+id/editText2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2_3"
                android:text="Проверить код"
                android:onClick="checkCode2_3"/>


            <!--Заключительная секция-->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2_4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2_4"
                android:text="@string/text2_4"/>

            <EditText
                android:id="@+id/editText2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2_4"
                android:text="Проверить код"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
